fixed incorrect constructor usage and increased permgen in build.gradle